slider added and create fb album js

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -41,3 +41,9 @@ img.zoom {
 .modal-footer {
   display: none;
 }
+
+.carousel-caption {
+  top: 30%;
+  transform: translateY(-50%);
+  text-align: left;
+}
