--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5257,7 +5257,7 @@ table p {
   }
 }
 .about-area.about-default-area:before {
-  background-color: #f7f7f7;
+  /* background-color: #f7f7f7; */
   bottom: 0;
   content: "";
   height: calc(100% + 225px);
