--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -2,13 +2,12 @@
 BODY {
   max-width: 1200px;
 } */
-.wrapper1 {
-  /* position: relative; */
+/* .wrapper1 {
   width: 100%;
   max-width: 1200px;
   height: 100%;
   min-height: 640px;
-}
+} */
 .divimage {
   position: absolute;
   top: 0;
